hphp/test/slow/array/ban.php.expectf
Fatal error: An expression is expected here. in %s/ban.php on line 5
